[package]
name = "main"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
cgmath = "0.18.0"
env_logger = "0.10.0"
futures = "0.3.27"
gfx-hal = "0.9.0"
image = "0.24.6"
log = "0.4.17"
pollster = "0.3.0"
winit = "0.28.3"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0.70"
rand = "0.8.5"
